# Island

./: .gitignore  CMakeLists.txt  README.md  default.frag  default.vert  main.cpp  post.frag  post.vert  water.frag  water.vert
Island/: 10012_crab_v2_iterations-1.mtl  config.txt
Island/Models/: Palm_01.mtl  island.mtl
Island/Models/Crab/: 10012_crab_v2_iterations-1.mtl
Island/Models/Island/: island.mtl
Island/Models/Island 2/: island.mtl
Island/Models/Island 3/: island3.mtl
Island/Models/Palm 2/: material.lib
Island/Models/Palm 3/: coconut palm.fbx  coconut_palm.mtl  curly palm.fbx
Island/Models/Palm Tree/: Cap_03.tga  Cap_03_Normal.tga  CoconutPalm.mtl  CoconutPalmClip.tga  CoconutPalmClip_Alpha.tga  CoconutPalmClip_Normal.tga  CoconutPalmLeaflet_1.tga  CoconutPalmLeaflet_1_Alpha.tga  CoconutPalmLeaflet_1_Normal.tga  CoconutPalmLeaflet_1_Spec.tga  CoconutPalmLeaflet_1_Spec_Alpha.tga  CoconutPalmLeaflet_2.tga  CoconutPalmLeaflet_2_Alpha.tga  CoconutPalmLeaflet_2_Normal.tga  CoconutPalmLeaflet_2_Spec.tga  CoconutPalmLeaflet_2_Spec_Alpha.tga  CoconutPalmLeaflet_3.tga  CoconutPalmLeaflet_3_Alpha.tga  CoconutPalmLeaflet_3_Normal.tga  CoconutPalmLeaflet_3_Spec.tga  CoconutPalmLeaflet_3_Spec_Alpha.tga  CoconutPalmLeaflet_4.tga  CoconutPalmLeaflet_4_Alpha.tga  CoconutPalmLeaflet_4_Normal.tga  CoconutPalmLeaflet_4_Spec.tga  CoconutPalmLeaflet_4_Spec_Alpha.tga  CoconutPalmStemDetail.tga  CoconutPalmStemDetail_Normal.tga  CoconutSkin.tga  CoconutSkin_Normal.tga
Island/Models/Rocks/10/: moss rock 10.mtl
Island/Models/Rocks/12/: moss rock 12.mtl
Island/Models/Rocks/13/: moss rock 13.mtl
Island/Models/Rocks/14/: moss rock 14.mtl
Island/Scenes/: island.scene
Island/Shaders/: default.frag  default.vert  post.frag  post.vert  shadow.vert  skybox.vert  water.frag  water.vert
Resources/: default.frag  default.vert  defaultPost.frag  defaultPost.vert  insert.txt  shadow.geom  shadow.vert  skybox.vert  text.frag  text.vert
Scenes/: island.scene  night.scene
lib/: CMakeLists.txt  back.cpp  back.h  components.cpp  components.h  imports.cpp  imports.h  mesh.cpp  mesh.h  model.cpp  model.h  obj.cpp  obj.h  pipe.cpp  pipe.h  shader.cpp  shader.h  textures.cpp  textures.h  vertex.cpp  vertex.h
lib/graphics/: CMakeLists.txt  mesh.cpp  mesh.h  model.cpp  model.h  obj.cpp  obj.h  shader.cpp  shader.h  text.cpp  text.h  textures.cpp  textures.h
lib/scene/: CMakeLists.txt  game.cpp  game.h
